<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity"
    android:gravity="center_horizontal">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="?attr/colorOnPrimary"
        android:background="?attr/colorPrimary"
        app:title="@string/product_shop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/avatarIV"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/avatar"
        android:layout_marginTop="@dimen/margin"/>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:layout_marginHorizontal="@dimen/margin" />

    <EditText
        android:id="@+id/priceET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:ems="10"
        android:hint="@string/enter_price"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="@dimen/margin" />

    <EditText
        android:id="@+id/descET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginHorizontal="@dimen/margin" />

</LinearLayout>